<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:clipToPadding="false"
    android:paddingHorizontal="6dp"
    android:scrollbars="none">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAllFiles"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_chip_all_files" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipToRead"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_chip_to_read" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipReading"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_chip_reading" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOnHold"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_chip_on_hold" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCompleted"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_chip_completed" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAbandoned"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_chip_abandoned" />
    </com.google.android.material.chip.ChipGroup>
</HorizontalScrollView>
